Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5633

not taking rq_lock when modify rq_resend

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.7.0
    • None
    • 3
    • 15758

      In after_reply():

              /* retry indefinitely on EINPROGRESS */
              if (lustre_msg_get_status(req->rq_repmsg) == -EINPROGRESS &&
                  ptlrpc_no_resend(req) == 0 && !req->rq_no_retry_einprogress) {
                      time_t  now = cfs_time_current_sec();
      
                      DEBUG_REQ(D_RPCTRACE, req, "Resending request on EINPROGRESS");
                      req->rq_resend = 1;
                      req->rq_nr_resend++;
      

      rq_lock should be taken before modify rq_resend.

            niu Niu Yawei (Inactive)
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: