LU-5633 ptlrpc: hold rq_lock when modify rq_flags

In after_reply(), take the rq_lock for changing the rq_resend.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: Id2025f0d5c6e7b0991f9ced031433a4d69dd1a16
Reviewed-on: http://review.whamcloud.com/11957
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>